...
    <string name="login_here">Login here</string>
    <string name="picture_from">Picture from %1$s</string>
    <string name="error">Error</string>
    <string name="success">Success</string>
    <string name="picture_empty">Picture can\'t be empty</string>
    <string name="permission_required">This permission is required</string>
    <string name="upload_success">Upload success!</string>
    <string name="choose_picture">Choose a picture</string>
    <string name="camera_failed">Failed to launch camera!</string>
    <string name="take_picture_failed">Failed to take a picture!</string>
    <string name="required">Required</string>
    <string name="home">Home</string>
    <string name="invalid_email">Invalid email!</string>
...
